Tid bit updates

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     ></span>
                   </h1>
                   <p class="text-light mx-auto para-desc disable-select">
-                    I am Second-year student pursuing a Bachelor of Technology
+                    I am Third-year student pursuing a Bachelor of Technology
                     in Computer Science Engineering from Vellore Institute Of
                     Technology, <br />
                     Vellore
@@ -173,7 +173,7 @@
                   <div class="mt-4 pt-2">
                     <a
                       target="_blank"
-                      href="https://drive.google.com/file/d/1LHNS2ePRu1hqjsOPjgLxFy7X4SqmTbex/view?usp=sharing"
+                      href="https://drive.google.com/file/d/1gKAzHyNl6yiggH7R9uUMb854j41GcFCL/view?usp=sharing"
                       class="btn btn-outline btn-round"
                       data-toggle="tooltip"
                       data-placement="bottom"
